# fibernuts

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
deploy/: .env.example  Caddyfile  HOSTING.md  compose.yaml  devnet.md  fiber-local.yml  fnn-entrypoint.sh  mintd.config.toml  mintd.host.toml  processor.Dockerfile  testnet.md
docs/: deployment.md  integration-contract.md  spec.md
mint/: Cargo.toml
mint/cdk-fiber/: Cargo.toml
mint/cdk-fiber/src/: amount.rs  config.rs  error.rs  lib.rs  rpc.rs  wire.rs
mint/cdk-fiber/tests/: live_devnet.rs  mint_payment.rs
mint/processor/: Cargo.toml
mint/processor/src/: main.rs
wallet/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
wallet/src/: App.tsx  styles.css
wallet/src/lib/: wallet.ts
